[tool.poetry]
name = "z"
version = "0.1.0"
description = "Z - Depedency Injection"
authors = ["Soof Golan <hi@soofgolan.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "z" }]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.5.0"
ruff = "^0.1.1"
black = "^23.10.0"


[tool.poetry.group.test.dependencies]
mypy = "^1.6.1"
pytest = "^7.4.2"
pytest-asyncio = "^0.21.1"
coverage = "^7.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
